Bug 112721 - PPT: tables "drift" down and text drops to the bottom because Spacing to Contents (Padding) increases on each save
Summary: PPT: tables "drift" down and text drops to the bottom because Spacing to Cont...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:6.2.0
Keywords: filter:ppt
Depends on:
Blocks: ImpressDraw-Tables PPT
  Show dependency treegraph
 
Reported: 2017-09-28 13:18 UTC by Christophe
Modified: 2019-11-14 09:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screen capture of a page changed all by itself (107.34 KB, image/jpeg)
2017-09-28 13:18 UTC, Christophe
Details
Test case demonstrating problem (837.00 KB, application/vnd.ms-powerpoint)
2017-09-28 13:53 UTC, Christophe
Details
Border settings changed (42.77 KB, image/jpeg)
2017-09-28 14:31 UTC, Christophe
Details
Test case (162.00 KB, application/vnd.ms-powerpoint)
2017-10-05 09:45 UTC, Christophe
Details
tdf112721_tablePadding.ppt: saved in MSWord 2003 with 0.26cm top border padding (131.00 KB, application/vnd.ms-powerpoint)
2018-06-29 07:02 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christophe 2017-09-28 13:18:06 UTC
Created attachment 136585 [details]
Screen capture of a page changed all by itself

Hello

1. Created a slideshow (16 pages)
2. Half of the pages contain a table (5 rows, 1 column)
3. At first the tables were centred in the free workspace and the cell contents vertically aligned "centre".
4. After editing the file several times -_other pages_ - without touching the tables
  (a) the tables "drift" down (even out of the workspace)
  (b) the text in all the cells drops to the bottom.
5. It's long and sometimes very difficult to get everything back to its original place.

Easy to see the problem in the attached screen capture.

Regards
Comment 1 Xisco Faulí 2017-09-28 13:21:51 UTC
> 4. After editing the file several times -_other pages_ - without touching
> the tables

Thank you for reporting the bug.
Unfortunately without clear steps to reproduce it, we cannot track down the origin of the problem.
Please provide a clearer set of step-by-step instructions on how to reproduce the problem.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the steps are provided
Comment 2 Christophe 2017-09-28 13:51:06 UTC
1. I created the attached file.
2. All the pages with tables were copied from page 2: so 3 was a copy of 2 with text added, then copied to make 4 with text added, then copied to make 5 etc

At first :  
  (a) all the tables were in the same position
  (b) all the text was vertically centred in the cells.

Now look at page 9 - the table is off the bottom of the page althought that page has never been changed - it's just a copy of 2.

All the text is now at the bottom of the cells although it has never been moved deliberately.

The only pages which have been changed are 7, 8, (inserted) and 16 (replaced completely).

It seems that each time the file is opened then saved the table/cell positioning information is not written back exactly the same even if it hasn't been edited.
Comment 3 Christophe 2017-09-28 13:53:17 UTC
Created attachment 136587 [details]
Test case demonstrating problem

Information with more detail requested
Comment 4 Christophe 2017-09-28 14:28:29 UTC
I have maybe found one clue...

In the properties of the table (right click on a line of text -> Properties -> Borders -> Spacing of content  - I'm translating it from French!), the top and bottom setings have changed all by themselves.
I will add a screen capture (but in another post because the las time all my text disappeared  (bug in the forum programme!)
Comment 5 Christophe 2017-09-28 14:31:59 UTC
Created attachment 136588 [details]
Border settings changed

If I reset the top and bottom borders to zero, first the text disappears then after a few random clicks it reappears vertically centred.
But I have to so it for each cell separately...
Comment 6 Timur 2017-10-05 08:56:30 UTC
https://wiki.documentfoundation.org/QA/BugReport
Key point is it's PPT. Not recommended to use PPT for work, rather to work on ODP and then finally save as PPT if needed sending. 
You are required to give minimal test case, let's say 1-slide file prior to problem, with steps how to reproduce a bug. 
For PPT/PPTX we need to know if it's FILEOPEN or FILESAVE bug. It's not easy if you give final file with error. 
You probably already pinpointed to Table Properties -> Borders -> Spacing to Contents. Just steps. 
In order to get it, use save as for each slide change to see when and what exactly happens. As a control you may use MS Office (or free MS viewer).
Comment 7 Christophe 2017-10-05 09:45:03 UTC
Created attachment 136776 [details]
Test case

> Not recommended to use PPT for work, rather to work on ODP and then finally save as PPT if needed

I create files on my computer with LO but they are always displayed on others which only have MS PowerPoint viewer. So that would mean keeping 2 versions of everything and switching between them several times a day to test.

> You are required to give minimal test case, let's say 1-slide file prior to problem, with steps how to reproduce a bug.
> For PPT/PPTX we need to know if it's FILEOPEN or FILESAVE bug. It's not easy if you give final file with error. 

1-slide file attached, newly created.
To produce the error, open it, close it, re-open it... (without changing anything). Check the spacing each time.

> You probably already pinpointed to Table Properties -> Borders -> Spacing to Contents.

As I suspected each time the file is saved then re-opened the spacing to contents has been changed (increased). You can see this easily with the attached file.
Comment 8 Christophe 2017-10-14 11:55:56 UTC Comment hidden (no-value)
Comment 9 Timur 2017-10-16 17:02:11 UTC
Table Properties -> Borders -> Spacing to Contents (renamed to Padding) in Test case is: Top 0,71 cm
On next save and reopen (RT) Top is: 0,93 cm. And so on. Tested with 6.0+.
It's Format Shape-Size-Text box in MSO. And next one is also 0,93 cm.
Now we know it's filesave bug.
Comment 10 Christophe 2017-10-16 17:30:35 UTC
(In reply to Timur from comment #9)
> Table Properties -> Borders -> Spacing to Contents (renamed to Padding) in
> Test case is: Top 0,71 cm
> On next save and reopen (RT) Top is: 0,93 cm. And so on. Tested with 6.0+.
> It's Format Shape-Size-Text box in MSO. And next one is also 0,93 cm.
> Now we know it's filesave bug.

Yes, and each time I save and re-open this file the spacing increases more.
5.2 - 11.3 - 20.2 (points)

So with a file of 16 pages, even if the ones with the tables concerned are never changed, all the text finishes by dropping off the bottom.

For information: I have tested the same with OPEN Office - the result is the same.
So for now (I have much work to do) I have had to return to Microsoft PowerPoint (no problem with this issue).
Comment 11 Justin L 2018-06-29 07:02:13 UTC
Created attachment 143196 [details]
tdf112721_tablePadding.ppt: saved in MSWord 2003 with 0.26cm top border padding

confirmed in 6.2alpha. A larger increment is added to the TOP (only) border padding on each save. Looks like an export bug, not import.
Comment 12 Justin L 2018-06-29 13:04:41 UTC
proposed fix https://gerrit.libreoffice.org/56690
Comment 13 Justin L 2018-06-29 13:16:59 UTC
I was not able to replicate the tables themselves drifting downwards (testing with 5.0), just the text in the cells. Probably that was just the table growing to accommodate the increased space taken up by each cell.
Comment 14 Commit Notification 2018-07-07 18:01:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=be9ed1cfec7a236786b714fc306a0631e598f234

tdf#112721 sd ppt export: don't adjust first line of table

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Justin L 2018-07-25 05:20:39 UTC
no one reviewing the back-port to 6.1. Leaving it as fixed for 6.2 only.