tdf#112721 sd ppt export: don't adjust first line of table

Round-tripping ppt files with tables was causing the
text content to slowly creep downward as space was
being added on each save.

No unit test. Something is wrong with saveAndReload for PPT.
Plus, I don't know what property contains this padding,
or whether it is a cell object or what that contains it.

Change-Id: I8918718c4ae2c87856910717c3ca8af1cbd86a6e