sd/source/filter/eppt/epptso.cxx
@@ -1087,7 +1087,7 @@ void PPTWriter::ImplWriteTextStyleAtom( SvStream& rOut, int nTextInstance, sal_u
         if ( mnTextSize )
             aTextObj.Write( &rOut );
 
-        if ( pPropOpt )
+        if ( pPropOpt && mType != "drawing.Table" )
             ImplAdjustFirstLineLineSpacing( aTextObj, *pPropOpt );
 
         sal_uInt32 nSize, nPos = rOut.Tell();
